# isoftapp

./: CMakeLists.txt  README
cmake/: Findqtsingleapplication.cmake
console/: CMakeLists.txt  main.cpp
data/: CMakeLists.txt  default.conf.example  isoftapp-daemon.service.in  org.isoftlinux.Isoftapp.conf  org.isoftlinux.Isoftapp.service.in  org.isoftlinux.Isoftapp.xml  other.conf.example  pkgcache.db
doc/: isoftapp-design.odg
krunner/: CMakeLists.txt  isoftapprunner.cpp  isoftapprunner.h  plasma-runner-isoftapp.desktop
po/: CMakeLists.txt  org.isoftlinux.Isoftapp.pot  zh_CN.po
qjade/: .directory  CMakeLists.txt  README.md  TODO.md  qjade.anthonos.desktop  qjade.desktop  qjade.isoft.desktop  qjade.pro  resources.qrc
qjade/brand/: .directory  anthonos.xml  generic.xml  isoft.xml
qjade/images/: .directory  README.md
qjade/qml/: .directory  AboutView.qml  DragArea.qml  HistoryView.qml  HotTodayView.qml  MyInstallButtonStyle.qml  MyLoader.qml  MyResultText.qml  MyScrollViewStyle.qml  MyToolButton.qml  MyWindow.qml  MyWindowButton.qml  PackageByCategoryView.qml  PackageInfoView.qml  PercentageButton.qml  SearchView.qml  Setting.qml  SlideShow.qml  StoreView.qml  TaskQueueView.qml  UninstallView.qml  UpdateView.qml  global.js  main.qml
qjade/src/: .directory  appinfo.h  backendlist.txt  brand.cpp  brand.h  categorymodel.cpp  categorymodel.h  filedownloader.cpp  filedownloader.h  globaldeclarations.h  globallist.h  httpget.cpp  httpget.h  i18n.cpp  iconmodel.cpp  iconmodel.h  jaded.xml  jadedbus.cpp  jadedbus.h  jadedbus_cpp  jadedbus_h  main.cpp  mypkgmodel.cpp  mypkgmodel.h  packagebycategorymodel.cpp  packagebycategorymodel.h  packageinfomodel.h  process.cpp  process.h  runguard.cpp  runguard.h  searchmodel.cpp  searchmodel.h  slideshowmodel.cpp  slideshowmodel.h  src.pri  util.cpp  util.h
qjade/translations/: qjade_zh_CN.qm  qjade_zh_CN.ts
src/: CMakeLists.txt  cached_md5.cpp  conf-helper.cpp  conf-helper.h  configuration.cpp  daemon.cpp  daemon.h  download.cpp  download.h  error.cpp  fileutl.cpp  genpkglist.cpp  gensrclist.cpp  isoft-genbasedir  isoftapp.cpp  rapttypes.h  rhash.cpp  rpmpm.cpp  rpmpm.h  splitstring.cpp  splitstring.h  strutl.cpp  tagfile.cpp  tagfile.h  urihelper.h
systray/: CMakeLists.txt  isoftapp_systray.desktop  main.cpp  progresswidget.cpp  progresswidget.h  systray.cpp  systray.h  upgradewidget.cpp  upgradewidget.h
test/: isoftapp-testcase.sh  test-listview.qml
